--- a/Berras bio/Pages/Movies/Index.cshtml
+++ b/Berras bio/Pages/Movies/Index.cshtml
@@ -1,15 +1,15 @@
-﻿@page
+﻿@page "{id:int?}"
 @model Berras_bio.Pages.Movies.IndexModel
 
 @{
     ViewData["Title"] = "Movie";
 }
 
-<h1>Index</h1>
+<h1>Movies</h1>
 
-<p>
+@*<p>
     <a asp-page="Create">Create New</a>
-</p>
+</p>*@
 <table class="table">
     <thead>
         <tr>
@@ -38,9 +38,7 @@
                 @Html.DisplayFor(modelItem => item.Seats)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-page="/Booking/Booking" asp-route-id="@item.ID">Book Tickets</a>  
             </td>
         </tr>
 }
