Made some progresswith the design. Need more work

--- a/Berras bio/Pages/Index.cshtml
+++ b/Berras bio/Pages/Index.cshtml
@@ -3,8 +3,25 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="/Content/styles/StyleSheet.css" />
+</head>
+<body>
+<h2>Movies Showing</h2>
+<div class="flex-container">
+    <div>
+        <img src="/Content/images/Bat_year_one_film.jpg" />
+    </div>
+    <div>
+         <img src="/Content/images/Dark_knight_returns.jpg" />
+    </div>
+    <div>
+         <img src="/Content/images/Batman_The_Long_Halloween_2021_poster.jpg" />
+    </div>
 </div>
+</body>
+
+
+</html>
