--- a/Berras bio/Pages/Shared/_Layout.cshtml
+++ b/Berras bio/Pages/Shared/_Layout.cshtml
@@ -7,31 +7,35 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Berras_bio.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="/Content/styles/StyleSheet.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-page="/Movies/Index">Berras Movies</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+    <header class="main-header">
+        <h2 class="h2-Start">Berras Movie Theater</h2>
+         <nav @*class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-custom mb-3"*@>
+             @*<div class="container">*@
+                @*<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                </button>*@
+                @*<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">*@
+                    <ul @*class="navbar-nav flex-grow-1"*@>
+                        <li @*class="nav-item"*@>
+                            <a class="nav-link" asp-area="" asp-page="/Index">Home</a>
+                            @*<a href="/Index">Home</a>*@
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Movies/Index">Movies</a>
+                        <li @*class="nav-item"*@>
+                            <a class="nav-link" asp-area="" asp-page="/Movies/Index">Movies</a>
+                            @*<a href="/Movies/Index">Movies</a>*@
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Booking/Booking">Tickets</a>
+                        <li @*class="nav-item"*@>
+                            <a class="nav-link" asp-area="" asp-page="/Booking/Booking">Tickets</a>
+                            @*<a href="/Booking/Booking">Tickets</a>*@
                         </li>
                     </ul>
-                </div>
-            </div>
-        </nav>
+                @*</div>*@
+            @*</div>*@
+        </nav> 
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -39,11 +43,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    @*<footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - Berras_bio - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer>*@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
