tested out with the Database

--- a/Berras bio/Pages/Theater_Page/Booking.cshtml
+++ b/Berras bio/Pages/Theater_Page/Booking.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model Berras_bio.Pages.Booking.CreateModel
+@model Berras_bio.Pages.Theater_Page.BookingModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Booking";
 }
 
-<h1>Create</h1>
+<h1>Booking</h1>
 
 <h4>Booking</h4>
 <hr />
