--- a/Berras bio/Pages/Theater_Page/MovieList.cshtml
+++ b/Berras bio/Pages/Theater_Page/MovieList.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model Berras_bio.Pages.Movies.IndexModel
+@model Berras_bio.Pages.Theater_Page.MovieListModel
 
 @{
-    ViewData["Title"] = "Movie";
+    ViewData["Title"] = "MovieList";
 }
 
-<h1>Index</h1>
+<h1>MovieList</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -38,9 +38,7 @@
                 @Html.DisplayFor(modelItem => item.Seats)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-page="./Booking" asp-route-id="@item.ID">Booking</a>
             </td>
         </tr>
 }
