--- a/Berras bio/Pages/Index.cshtml
+++ b/Berras bio/Pages/Index.cshtml
@@ -10,17 +10,19 @@
 </head>
 <body>
 <h2>Movies Showing</h2>
-<div class="flex-container">
-    <div>
-        <img src="/Content/images/Bat_year_one_film.jpg" />
+ <div class="flex-container">
+    <div class="row">
+      <div class="col-xs-6 col-md-3">
+        <img class="img-fluid" src="/Content/images/Bat_year_one_film.jpg"  />
+      </div>
+      <div class="col-xs-6 col-md-3">
+         <img class="img-fluid" src="/Content/images/Dark_knight_returns.jpg"  />
+      </div>
+      <div class="col-xs-6 col-md-3">
+         <img class="img-fluid" src="/Content/images/Batman_The_Long_Halloween_2021_poster.jpg" />
+      </div>
     </div>
-    <div>
-         <img src="/Content/images/Dark_knight_returns.jpg" />
-    </div>
-    <div>
-         <img src="/Content/images/Batman_The_Long_Halloween_2021_poster.jpg" />
-    </div>
-</div>
+  </div>
 </body>
 
 
