--- a/Berras bio/Pages/Shared/_Layout.cshtml
+++ b/Berras bio/Pages/Shared/_Layout.cshtml
@@ -5,48 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Movie</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/Content/styles/StyleSheet.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Berras_bio.styles.css" asp-append-version="true" />
+    
 </head>
 <body>
-    <header class="main-header">
+    <header class="image">
         <h2 class="h2-Start">Berras Movie Theater</h2>
-         <nav @*class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-custom mb-3*@">
-             @*<div class="container">*@
-                @*<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>*@
-               @* <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">*@
-                 <ul @*class="navbar-nav flex-grow-1"*@>
-                        <li @*class="nav-item"*@>
-                            <a class="nav-link" asp-area="" asp-page="/Index">Home</a>
-                            @*<a href="/Index">Home</a>*@
+    </header>
+    <div class="container">
+         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-custom">
+             <div class="d-inline-flex p-2">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                 <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            @*<a class="nav-link" asp-area="" asp-page="/Index">Home</a>*@
+                            <a href="/Index">HOME</a>
                        </li>
-                       <li @*class="nav-item"*@>
-                            <a class="nav-link" asp-area="" asp-page="/Movies/Index">Movies</a>
-                            @*<a href="/Movies/Index">Movies</a>*@
+                       <li class="nav-item">
+                           @* <a class="nav-link" asp-area="" asp-page="/Theater_Page/MovieList">Movies</a>*@
+                            <a href="/Theater_Page/MovieList">MOVIES</a>
                        </li>
-                       <li @*class="nav-item"*@>
-                            <a class="nav-link" asp-area="" asp-page="/Booking/Booking">Tickets</a>
-                            @*<a href="/Booking/Booking">Tickets</a>*@
+                       <li class="nav-item">
+                            @*<a class="nav-link" asp-area="" asp-page="/Theater_Page/Booking">Tickets</a>*@
+                            <a href="/Theater_Page/Booking">TICKETS</a>
                         </li>
                     </ul>
-                @*</div>*@
-            @*</div>*@
-        </nav>
-    </header>
+                </div>
+            </div>
+        </nav>  
+    </div>
+     
+    
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    @*<footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - Berras_bio - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer>*@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -55,3 +57,9 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+
+    @*<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>*@
