--- a/Berras bio/Pages/Theater_Page/Booking.cshtml
+++ b/Berras bio/Pages/Theater_Page/Booking.cshtml
@@ -5,10 +5,8 @@
     ViewData["Title"] = "Booking";
 }
 
-<h1>Booking</h1>
+<h1 class="h2-start">Buy Tickets</h1>
 
-<h4>Booking</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
