--- a/Berras bio/Pages/Theater_Page/MovieList.cshtml
+++ b/Berras bio/Pages/Theater_Page/MovieList.cshtml
@@ -5,11 +5,8 @@
     ViewData["Title"] = "MovieList";
 }
 
-<h1>MovieList</h1>
+<h1 class="h2-start">Movies</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
