Added new cshtml site to match the Pages_Booking model. Error occurs when using booktickets but the booking still ends in DB

--- a/Berras bio/Pages/Shared/_Layout.cshtml
+++ b/Berras bio/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                        </li>
                        <li class="nav-item">
                             @*<a class="nav-link" asp-area="" asp-page="/Theater_Page/Booking">Tickets</a>*@
-                            <a href="/Theater_Page/Booking">TICKETS</a>
+                            <a href="/Theater_Page/BookTickets">TICKETS</a>
                         </li>
                     </ul>
                 </div>
