--- a/Berras bio/Pages/Index.cshtml
+++ b/Berras bio/Pages/Index.cshtml
@@ -8,15 +8,19 @@
 <body>
 
 <h2>Movies Showing</h2>
+@*<div class="continer"></div>*@
  <div class="flex-container">
     <div class="row">
-      <div class="col-xs-6 col-md-3">
+      <div class="col-xs-6 col-md-2">
+          <p>Batman: Year One</p>
         <img class="img-fluid" src="/Content/images/Bat_year_one_film.jpg"  />
       </div>
-      <div class="col-xs-6 col-md-3">
+      <div class="col-xs-6 col-md-2">
+          <p>Batman: The Darkt Knight Returns</>
          <img class="img-fluid" src="/Content/images/Dark_knight_returns.jpg"  />
       </div>
-      <div class="col-xs-6 col-md-3">
+      <div class="col-xs-6 col-md-2">
+          <p>Batman: The Long Halloween</p>
          <img class="img-fluid" src="/Content/images/Batman_The_Long_Halloween_2021_poster.jpg" />
       </div>
     </div>
