--- a/Berras bio/Pages/Theater_Page/Booking.cshtml
+++ b/Berras bio/Pages/Theater_Page/Booking.cshtml
@@ -32,14 +32,14 @@
                 <span asp-validation-for="Booking.Tickets" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Buy" onclick="return confirm('Your tickets are booked')" class="btn btn-dark" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="/Theater_Page/MovieList">Back to Movies</a>
 </div>
 
 @section Scripts {
