Updated the design

--- a/Berras bio/Pages/Index.cshtml
+++ b/Berras bio/Pages/Index.cshtml
@@ -8,20 +8,25 @@
 <body>
 
 <h2>Movies Showing</h2>
-@*<div class="continer"></div>*@
- <div class="flex-container">
+ <div class="flex-continer">
     <div class="row">
       <div class="col-xs-6 col-md-2">
-          <p>Batman: Year One</p>
-        <img class="img-fluid" src="/Content/images/Bat_year_one_film.jpg"  />
+          <a href="/Theater_page/MovieList"> 
+              <img class="img-fluid" src="/Content/images/Bat_year_one_film.jpg"  />
+          </a> 
+           <label for="Batman: Year One">Batman: Year One</label>
       </div>
       <div class="col-xs-6 col-md-2">
-          <p>Batman: The Darkt Knight Returns</>
-         <img class="img-fluid" src="/Content/images/Dark_knight_returns.jpg"  />
+          <a href="/Theater_page/MovieList"> 
+              <img class="img-fluid" src="/Content/images/Dark_knight_returns.jpg"  />
+          </a>
+          <label for="Batman: The Darkt Knight Returns">Batman: The Darkt Knight Returns</label>
       </div>
       <div class="col-xs-6 col-md-2">
-          <p>Batman: The Long Halloween</p>
-         <img class="img-fluid" src="/Content/images/Batman_The_Long_Halloween_2021_poster.jpg" />
+          <a href="/Theater_page/MovieList">
+            <img class="img-fluid" src="/Content/images/Batman_The_Long_Halloween_2021_poster.jpg" /> 
+          </a>  
+          <label for="Batman: The Long Halloween">Batman: The Long Halloween</label>
       </div>
     </div>
   </div>
