--- a/Berras bio/Pages/Shared/_Layout.cshtml
+++ b/Berras bio/Pages/Shared/_Layout.cshtml
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Movie</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/Content/styles/StyleSheet.css" />
+    <link rel="stylesheet" href="~/Content/styles/myStyles.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Berras_bio.styles.css" asp-append-version="true" />
     
 </head>
 <body>
+   
     <header class="image">
         <h2 class="head-Start">Berras Movie Theater</h2>
     </header>
-    <div class="flex-container">
+     <div class="flex-container">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-custom">
              <div class="container">
                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -25,15 +26,15 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                  <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link btn btn-sm btn-outline-info me-4" asp-area="" asp-page="/Index">HOME</a>
+                            <a class="nav-link btn btn-sm btn-outline-danger me-4" asp-area="" asp-page="/Index">HOME</a>
                             @*<a href="/Index">HOME</a>*@
                        </li>
                        <li class="nav-item">
-                            <a class="nav-link btn btn-sm btn-outline-info me-4" asp-area="" asp-page="/Theater_Page/MovieList">MOVIES</a>
+                            <a class="nav-link btn btn-sm btn-outline-warning me-4" asp-area="" asp-page="/Theater_Page/MovieList">MOVIES</a>
                             @*<a href="/Theater_Page/MovieList">MOVIES</a>*@
                        </li>
                        <li class="nav-item">
-                            <a class="nav-link btn btn-sm btn-outline-info me-4" asp-area="" asp-page="/Theater_Page/BookTickets">TICKETS</a>
+                            <a class="nav-link btn btn-sm btn-outline-warning me-4" asp-area="" asp-page="/Theater_Page/BookTickets">TICKETS</a>
                             @*<a href="/Theater_Page/BookTickets">TICKETS</a>*@
                         </li>
                     </ul>
