--- a/Berras bio/Pages/Theater_Page/MovieList.cshtml
+++ b/Berras bio/Pages/Theater_Page/MovieList.cshtml
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.Seats)
             </td>
             <td>
-                <a asp-page="./BookTickets" asp-route-id="@item.ID">BookTickets</a>
+                <a asp-page="./BookTickets" asp-route-id="@item.ID">Buy Tickets</a>
             </td>
         </tr>
 }
