--- a/Berras bio/Pages/Theater_Page/BookTickets.cshtml
+++ b/Berras bio/Pages/Theater_Page/BookTickets.cshtml
@@ -40,11 +40,11 @@
                 <input asp-for="Pages_Booking.Tickets" class="form-control" />
                 <span asp-validation-for="Pages_Booking.Tickets" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Pages_Booking.date" class="control-label"></label>
                 <input asp-for="Pages_Booking.date" class="form-control" />
                 <span asp-validation-for="Pages_Booking.date" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Buy" onclick="return confirm('Your tickets are booked')" class="btn btn-outline-warning" />
             </div>
