--- a/Berras bio/Pages/Theater_Page/BookTickets.cshtml
+++ b/Berras bio/Pages/Theater_Page/BookTickets.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "BookTickets";
 }
 
-<h1 class="h2-start">Buy Tickets</h1>
+<h1>Buy Tickets</h1>
 
 <hr />
 <div class="row">
@@ -17,8 +17,6 @@
                 <select asp-for="Pages_Booking.Title" asp-items="Model.movieOptions">
                     <options value="">--Select Movie--</options>
                 </select>
-                @*<input asp-for="Pages_Booking.Title" class="form-control" />*@
-                @*<span asp-validation-for="Pages_Booking.Title" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="Pages_Booking.FirstName" class="control-label"></label>
@@ -40,13 +38,8 @@
                 <input asp-for="Pages_Booking.Tickets" class="form-control" />
                 <span asp-validation-for="Pages_Booking.Tickets" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-                <label asp-for="Pages_Booking.date" class="control-label"></label>
-                <input asp-for="Pages_Booking.date" class="form-control" />
-                <span asp-validation-for="Pages_Booking.date" class="text-danger"></span>
-            </div>*@
             <div class="form-group">
-                <input type="submit" value="Buy" onclick="return confirm('Your tickets are booked')" class="btn btn-outline-warning" />
+                <input type="submit" value="Buy" on-click="" class="btn btn-outline-warning" />
             </div>
         </form>
     </div>
