--- a/Berras bio/Pages/Shared/_Layout.cshtml
+++ b/Berras bio/Pages/Shared/_Layout.cshtml
@@ -12,9 +12,13 @@
 </head>
 <body>
    
-    <header class="image">
-        <h2 class="head-Start">Berras Movie Theater</h2>
-    </header>
+    
+    <div class="jumbotron jumbotron-fluid image">
+        <div class="container">
+             <h1 class="head-Start">Berras Movie Theater</h1>
+        </div>
+    </div>
+        
      <div class="flex-container">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-custom">
              <div class="container">
@@ -26,16 +30,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                  <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link btn btn-sm btn-outline-danger me-4" asp-area="" asp-page="/Index">HOME</a>
-                            @*<a href="/Index">HOME</a>*@
+                            <a class="nav-link btn btn-sm btn-outline-warning me-4" asp-area="" asp-page="/Index">HOME</a>
                        </li>
                        <li class="nav-item">
                             <a class="nav-link btn btn-sm btn-outline-warning me-4" asp-area="" asp-page="/Theater_Page/MovieList">MOVIES</a>
-                            @*<a href="/Theater_Page/MovieList">MOVIES</a>*@
                        </li>
                        <li class="nav-item">
                             <a class="nav-link btn btn-sm btn-outline-warning me-4" asp-area="" asp-page="/Theater_Page/BookTickets">TICKETS</a>
-                            @*<a href="/Theater_Page/BookTickets">TICKETS</a>*@
                         </li>
                     </ul>
                 </div>
@@ -49,7 +50,7 @@
         </main>
     </div>
 
-    @*<footer class="border-top footer text-muted">
+@*    <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - Berras_bio - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
