--- a/Berras bio/Pages/Theater_Page/BookTickets.cshtml
+++ b/Berras bio/Pages/Theater_Page/BookTickets.cshtml
@@ -39,7 +39,7 @@
                 <span asp-validation-for="Pages_Booking.Tickets" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Buy" on-click="" class="btn btn-outline-warning" />
+                <input type="submit" value="Buy" class="btn btn-outline-warning" />
             </div>
         </form>
     </div>
