--- a/Berras bio/Pages/Theater_Page/BookingSuccess.cshtml
+++ b/Berras bio/Pages/Theater_Page/BookingSuccess.cshtml
@@ -3,5 +3,6 @@
 @{
 }
 <div class="message order-success">
-    <h2>Thank you for your purchase !</h2>
+    <h4>Thank you for your purchase !</h4>
+    <h6>Enjoy the Movie!</h6>
 </div>
