--- a/Berras bio/Pages/Index.cshtml
+++ b/Berras bio/Pages/Index.cshtml
@@ -12,19 +12,19 @@
     <div class="row">
       <div class="col-xs-6 col-md-2">
           <a href="/Theater_page/MovieList"> 
-              <img class="img-fluid" src="/Content/images/Bat_year_one_film.jpg"  />
+              <img class="image-movies" src="/Content/images/Bat_year_one_film.jpg"  />
           </a> 
            <label for="Batman: Year One">Batman: Year One</label>
       </div>
       <div class="col-xs-6 col-md-2">
           <a href="/Theater_page/MovieList"> 
-              <img class="img-fluid" src="/Content/images/Dark_knight_returns.jpg"  />
+              <img class="image-movies" src="/Content/images/Dark_knight_returns.jpg"  />
           </a>
           <label for="Batman: The Darkt Knight Returns">Batman: The Darkt Knight Returns</label>
       </div>
       <div class="col-xs-6 col-md-2">
           <a href="/Theater_page/MovieList">
-            <img class="img-fluid" src="/Content/images/Batman_The_Long_Halloween_2021_poster.jpg" /> 
+            <img class="image-movies" src="/Content/images/Batman_The_Long_Halloween_2021_poster.jpg" /> 
           </a>  
           <label for="Batman: The Long Halloween">Batman: The Long Halloween</label>
       </div>
