--- a/Berras bio/wwwroot/Content/styles/myStyles.css
+++ b/Berras bio/wwwroot/Content/styles/myStyles.css
@@ -19,7 +19,7 @@ html, body {
 }
 .image-movies {
     float: left;
-    width: 200px;
+    width: 100%;
     height: 300px;
     object-fit: cover;
 }
