--- a/Berras bio/wwwroot/Content/styles/myStyles.css
+++ b/Berras bio/wwwroot/Content/styles/myStyles.css
@@ -10,12 +10,18 @@ html, body {
     background-color: #190001;
 }
 
-.image {
+.image-front {
     height: 55vh;
     background-image: url("/content/images/movie-theatre1.jpg");
     background-size: 100% 400px;
     background-repeat: no-repeat;
     color: #2B2C4A;
+}
+.image-movies {
+    float: left;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
 }
 
 .flex-container > div {
@@ -34,10 +40,6 @@ html, body {
     font-size: 5vw;
     color: #460054;
 }
-
-ul {
-}
-
 li {
     display: inline;
     padding: 20px;
