--- a/Berras bio/Pages/Theater_Page/BookTickets.cshtml
+++ b/Berras bio/Pages/Theater_Page/BookTickets.cshtml
@@ -38,7 +38,9 @@
                 <input asp-for="Pages_Booking.Tickets" class="form-control" />
                 <span asp-validation-for="Pages_Booking.Tickets" class="text-danger"></span>
             </div>
-
+            <div class="form-group">
+                <label></label>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Buy" class="btn btn-outline-warning" />
             </div>
