--- a/Berras bio/wwwroot/Content/styles/myStyles.css
+++ b/Berras bio/wwwroot/Content/styles/myStyles.css
@@ -1,5 +1,4 @@
-﻿
-* {
+﻿* {
     font-family: Courier New, Courier, monospace;
     color: #c27008;
 }
@@ -10,12 +9,19 @@ html, body {
     background-color: #190001;
 }
 
-.image {
+.image-front {
     height: 55vh;
-    background-image: url("/content/images/movie-theatre1.jpg");
+    background-image: url("/Content/images/movie-theatre1.jpg");
     background-size: 100% 400px;
     background-repeat: no-repeat;
     color: #2B2C4A;
+}
+
+.image-movies {
+    float: left;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
 }
 
 .flex-container > div {
@@ -24,7 +30,7 @@ html, body {
     width: 100px;
     margin: 20px;
     text-align: center;
-    line-height: 50px;
+    line-height: 100px;
 }
 
 .head-Start {
@@ -35,12 +41,9 @@ html, body {
     color: #460054;
 }
 
-ul {
-}
-
 li {
     display: inline;
-    padding: 20px;
+    padding: 5px;
 }
 
 a {
