--- a/Berras bio/Pages/Theater_Page/BookTickets.cshtml
+++ b/Berras bio/Pages/Theater_Page/BookTickets.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "BookTickets";
+   
 }
 
 <h1>Buy Tickets</h1>
@@ -17,6 +18,7 @@
                 <select asp-for="Pages_Booking.Title" asp-items="Model.movieOptions">
                     <options value="">--Select Movie--</options>
                 </select>
+                <span asp-validation-for="Pages_Booking.Tickets" class="text-danger" />
             </div>
             <div class="form-group">
                 <label asp-for="Pages_Booking.FirstName" class="control-label"></label>
@@ -33,12 +35,15 @@
                 <input asp-for="Pages_Booking.Email" class="form-control" />
                 <span asp-validation-for="Pages_Booking.Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Pages_Booking.Tickets" class="control-label"></label>
-                <input asp-for="Pages_Booking.Tickets" class="form-control" />
-                <span asp-validation-for="Pages_Booking.Tickets" class="text-danger"></span>
+            <div>
+                <label></label>
             </div>
             <div class="form-group">
+                <label asp-for="Pages_Booking.Tickets" class="control-label"></label>
+                <input asp-for="Pages_Booking.Tickets" class="list-group-numbered" min="0" max="12" />
+                <span asp-validation-for="Pages_Booking.Tickets" class="text-danger"></span>
+            </div>
+            <div>
                 <label></label>
             </div>
             <div class="form-group">
