--- a/Berras bio/Pages/Theater_Page/BookTickets.cshtml
+++ b/Berras bio/Pages/Theater_Page/BookTickets.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "BookTickets";
-   
+    
 }
 
 <h1>Buy Tickets</h1>
@@ -15,9 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Pages_Booking.Title" class="control-label"></label>
-                <select asp-for="Pages_Booking.Title" asp-items="Model.movieOptions">
-                    <options value="">--Select Movie--</options>
-                </select>
+                <select asp-for="Pages_Booking.Title" asp-items="Model.movieOptions"> </select>
                 <span asp-validation-for="Pages_Booking.Tickets" class="text-danger" />
             </div>
             <div class="form-group">
@@ -40,8 +38,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Pages_Booking.Tickets" class="control-label"></label>
-                <input asp-for="Pages_Booking.Tickets" class="list-group-numbered" min="0" max="12" />
-                <span asp-validation-for="Pages_Booking.Tickets" class="text-danger"></span>
+                <input asp-for="Pages_Booking.Tickets" class="list-group-numbered" min="0" max="12"  />
+                <span asp-validation-for="Pages_Booking.Tickets" class="text-danger" ></span>
             </div>
             <div>
                 <label></label>
